--- a/halfinteger/blog/templates/blog/post.html
+++ b/halfinteger/blog/templates/blog/post.html
@@ -1,54 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-            <meta charset="utf-8">
-            <title>{{ meta.title }}</title>
-            
-            <meta name="description" content="{{ meta.description }}">
-            <meta name="author" content="{{ meta.author }}">
-            
-            <meta name="apple-mobile-web-app-capable" content="yes" />
-            <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-            
-            <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-            
-            <!-- Bootstrap -->
-            
-            <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-                crossorigin="anonymous">
-            
-            <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-                crossorigin="anonymous"></script>
-            
-            <style type="text/css">
-                body {
-                    color: white;
-                    background-color: rgb(37, 37, 37);
-                    font-size: 30px;
-                    line-height: 1.5em;
-                    margin: 1% 20% 1%;
-                }
-            
-                .description,
-                .intro {
-                    font-size: 25px;
-                    line-height: 1.2em;
-                }
-            
-                .footer {
-                    font-size: 20px;
-                    line-height: 1em;
-                }
-            </style>
-    </head>
-
+    {% include 'blog/head.html' %}
     <body>
         <div class="page-header">
-            <h1>Roger's Blog</h1>
+            <h1>{{ meta['title'] | safe }}</h1>
         </div>
 
         <div class="content">
             {{ html|safe }}
         </div>
     </body>
+
 </html>
